# tag_parser

./: .travis.yml  CMakeLists.txt  README.md
lib/errors/: CMakeLists.txt
lib/errors/include/: errors.h
lib/tag/: CMakeLists.txt
lib/tag/include/: attribute.h  error.h  tag.h
lib/tag/src/: .tag.c.swp  attribute.c  tag.c  utils.c  utils.h
lib/tag/tests/: CMakeLists.txt
lib/tag/tests/src/: test_attribute.cpp  test_tag.cpp
lib/tag_parser/: CMakeLists.txt
lib/tag_parser/include/: error.h  tag_parser.h
lib/tag_parser/src/: tag_parser.c  utils.c
lib/utils/: CMakeLists.txt
lib/utils/include/: error.h  errors.h  tag.h  utils.h
lib/utils/src/: utils.c
src/: main.c
